objects/CRM_Borrowing_Power_Rate__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Credit_Impairment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Impairment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Rate__c</fullName>
        <label>Rate</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Self_Employed_Months__c</fullName>
        <label>Self Employed Months</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Type_Detail__c</fullName>
        <label>Type Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Conforming Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Conforming Low Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Full Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Low Doc</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>NCFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Borrowing Power Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CRM_Type__c</columns>
        <columns>CRM_Type_Detail__c</columns>
        <columns>CRM_Credit_Impairment__c</columns>
        <columns>CRM_Self_Employed__c</columns>
        <columns>CRM_Self_Employed_Months__c</columns>
        <columns>CRM_Rate__c</columns>
        <columns>CRM_Start_Date__c</columns>
        <columns>CRM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPR-{00000}</displayFormat>
        <label>Borrowing Power Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowing Power Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>